Changed java version from 9 to 8